apps.wordpress.org: `screen-reader-text` was causing some overflow issues on mobile.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@2096 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-apps/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-apps/style.css
@@ -179,6 +179,9 @@ a img {
   /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px);
   position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
 }
 
 .screen-reader-text:hover,
